apps/base/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      terminationGracePeriodSeconds: 60
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - talos-rwj-wvp
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.3_v2.0.14-ls476 # {"$imagepolicy": "flux-system:qbittorrent"}
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - DAC_OVERRIDE
                - SETGID
                - SETUID
          ports:
            - name: qbit-http
              containerPort: 8080
          startupProbe:
            tcpSocket:
              port: qbit-http
            periodSeconds: 5
            failureThreshold: 60
          readinessProbe:
            tcpSocket:
              port: qbit-http
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: qbit-http
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-pool
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: media-pool
          persistentVolumeClaim:
            claimName: media-pool
        - name: scripts
          configMap:
            name: qbittorrent-scripts
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: gluetun-state
          persistentVolumeClaim:
            claimName: qbittorrent-gluetun-state
