apps/base/qbittorrent/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: qbit-http
